# jobDB

./: .gitignore  Dockerfile  Procfile  pyproject.toml  railway.toml
.github/: copilot-instructions.md
.github/agents/: data-verifier.agent.md  progress-tracker.agent.md
.github/prompts/: verify-data.prompt.md
.github/workflows/: ci.yml
config/: settings.py
docs/: DATABASE_SCHEMA.md  POWERBI_DOCUMENTATION.md  PROJECT_DESIGN.md  README.md  SUMMARY.md  TODO.md
docs/verification/: 2026-04-10-2.md  2026-04-10-pracuj.md  2026-04-10.md
powerbi/: README.md  apply_model.csx  model.bim
scripts/: backup_db.py  check_scraped_data.py  compare_offers.py  debug_html.py  debug_salary.py  migrate_duckdb_to_mysql.py  run_scraper.py  schedule_scraper.py  test_fixes.py  verify_credibility.py  verify_data.py  verify_pracuj.py
src/dashboard/: app.py
src/dashboard/html/: api.py  app.js  index.html  style.css
src/dashboard/pages/: 2_📋_Postep_prac.py  3_🕷️_Scrapowanie.py
src/db/: database.py  migrations.py  queries.py
src/models/: schema.py
src/pipeline/: deduplicator.py  normalizer.py  orchestrator.py  polish_cities.py
src/scrapers/: _justjoin_base.py  base.py  jooble.py  justjoinit.py  nofluffjobs.py  pracapl.py  pracujpl.py  rocketjobs.py
tests/test_scrapers/: test_salary_parsing.py
